# learn-bitcoin

./: Cargo.toml
address/: Cargo.toml
address/src/: lib.rs
src/: main.rs
vanity/: Cargo.toml
vanity/src/: error.rs  lib.rs  vanity_generator.rs
