[package]
name = "address"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bitcoin = { version = "0.30.1", features = ["rand-std"] }
bs58 = "0.5.0"
hex-literal = "0.4.1"
ripemd = "0.1.3"
sha2 = "0.10.7"
