[package]
name = "vanity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.30.1", features = ["rand-std"] }
address = { path = "../address" }
time-test = "0.2.3"
thiserror = "1.0.47"
